# geocompare

./: .gitignore  HANDOFF.md  README.md  handoff.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
deploy/: geocompare-api.service
doc/: architecture.md  argument-types.md  census-background.md  commands.md  fbi_cde_access_notes.md  future-development.md  glossary.md  goals.md  gui.md  index.md  overlays.md  remote-access.md  setup.md  technical-documentation.md  tutorial.md  versioning.md
geocompare/: __init__.py  engine.py
geocompare/database/: Database.py  __init__.py
geocompare/datainterface/: DemographicProfile.py  GeoVector.py  __init__.py
geocompare/identity/: __init__.py  place_identity.py
geocompare/ingest/: __init__.py  database_builder.py
geocompare/interfaces/: __init__.py  api.py  cli.py  gui.py
geocompare/models/: __init__.py  (+2 more)
geodata/: cli.py  engine.py
scripts/: build_nibrs_crime_overlay.py  fetch_latest_acs.py  fetch_overlays.py
tests/: test_api_helpers.py  test_api_similarity.py  test_cli_geovectors.py  test_cli_local_average.py  test_cli_map_links.py  test_cli_number_parsing.py  test_cli_remoteness.py  test_cli_sources.py  test_database_overlays.py  test_engine_data_identifiers.py  test_engine_geofilter_parsing.py  test_engine_local_average.py  test_engine_remoteness.py  test_fetch_latest_acs.py  test_fetch_overlays.py  test_geography_names.py  test_geovector.py  test_map_links.py  test_numeric_tools.py  test_place_identity.py  test_query_syntax.py  test_sqlite_repository.py  test_tools_modules.py
(+52 files in other folders)
